<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.bedag.dap.hellodata</groupId>
    <artifactId>hello-data</artifactId>
    <version>develop-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>HelloDATA-BE</name>

    <modules>
        <module>hello-data-commons</module>
        <module>hello-data-portal</module>
        <module>hello-data-sidecars</module>
        <module>hello-data-subsystems</module>
        <module>hello-data-deployment</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub kanton-bern Maven Packages</name>
            <url>https://maven.pkg.github.com/kanton-bern/hellodata-be</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
        <git-commit-id-maven-plugin.version>9.0.2</git-commit-id-maven-plugin.version>
        <push-docker-image-phase>post-integration-test</push-docker-image-phase>
        <docker.namespace>bedag</docker.namespace>
        <docker-maven-plugin.version>0.45.0</docker-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
        <build.number>local-build</build.number>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <!--
                  expose the project version as a property that is in compliance with docker tag name restrictions:
                  1 to 128 characters matching the regex [A-Za-z0-9_.-]+
                  see: https://github.com/docker/docker/issues/8445
                  and: https://github.com/docker/docker/pull/8447
                -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>docker-tag-name</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>regex-property</goal>
                            </goals>
                            <configuration>
                                <name>docker.tag.name</name>
                                <value>${project.version}</value>
                                <!-- inverse match the characters allowed in docker tag names -->
                                <regex>[^A-Za-z0-9_.-]</regex>
                                <!-- empty replacement replaces all occurrences with an empty string -->
                                <!-- if no match is found, the value is a valid docker tag name -->
                                <failIfNoMatch>false</failIfNoMatch>
                            </configuration>
                        </execution>
                        <execution>
                            <!-- use standard docker-tag latest for development-SNAPSHOT -->
                            <id>use-latest</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>regex-property</goal>
                            </goals>
                            <configuration>
                                <name>docker.tag.name</name>
                                <value>${project.version}</value>
                                <regex>develop-SNAPSHOT</regex>
                                <replacement>latest</replacement>
                                <failIfNoMatch>false</failIfNoMatch>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>io.fabric8</groupId>
                    <artifactId>docker-maven-plugin</artifactId>
                    <version>${docker-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>build-docker-image</id>
                            <phase>post-integration-test</phase>
                            <goals>
                                <goal>build</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>push-docker-image</id>
                            <phase>${push-docker-image-phase}</phase>
                            <goals>
                                <goal>push</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <verbose>true</verbose>
                        <logStdout>true</logStdout>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>tidy-maven-plugin</artifactId>
                    <version>1.2.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>${git-commit-id-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skipPoms>false</skipPoms>
                    <runOnlyOnce>false</runOnlyOnce>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
                <configuration>
                    <deployAtEnd>false</deployAtEnd>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>tidy-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
